# qortex

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
discography/: manage.py
discography/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
discography/catalog/migrations/: 0001_initial.py
discography/catalog/tests/: test_api.py  test_serializers.py
discography/discography/: asgi.py  settings.py  urls.py  wsgi.py
